--- a/templates/index/card.html.twig
+++ b/templates/index/card.html.twig
@@ -6,7 +6,7 @@
 <div class="col-md-4 mt-2 mb-3">
 
     <div class="card bg-light">
-        <input type="hidden" id="streamer_user" name="streamer[{{ id }}][user]" value="{{ user }}">
+{#        <input type="hidden" id="streamer_user" name="streamer[{{ id }}][user]" value="{{ user }}">#}
 
         <span class="fa fa-location-arrow testHook ml-1 mt-1 text-primary" data-channel="{{ channel }}" data-id="{{ id }}" title="test"></span>
         <span class="fa fa-times removeBox mr-1 mt-1 text-danger" title="remove"></span>
